<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MY Credentials</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_post_login">PostLoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">ADD</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="accountName">Account Name</string>
    <string name="catagory">Category</string>
    <string name="delete">Delete</string>
    <string name="account">Account Name:</string>
    <string name="user">UserName :</string>
    <string name="passStatic">Password :</string>
    <string name="reminderName">Reminder Name</string>
    <string name="date">Reminder Date</string>
    <string name="reminderNote">Reminder Note</string>
    <string name="reminderHeading">Reminder Heading</string>
    <string name="refresh">Refresh</string>
    <string name="myService">My Service</string>
    <string name="update">Update</string>
    <string name="changePassword">Change Password</string>
      <string name="aboutus">About Us</string>
  
         <string name="otherapps">Other Apps</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="oldPassword">Old Password</string>    
     <string name="reminderDetails">Reminder Details</string>
     
      <string name="nikhil">Nikhil Vijayakumar</string>   
       <string name="amal">Amaldev T.A.</string> 
        <string name="develop">Developed by</string>  
          <string name="blog">http://androidsourcecod.blogspot.in/2015/04/my-credentials-android-app.html</string>     

</resources>
