<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/accountNameStatic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/padding"
            android:text="@string/account"
            android:textColor="@color/editTextColor"
            android:textSize="@dimen/textSize_edit_text" />

        <TextView
            android:id="@+id/accountName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/padding"
            android:text="@string/app_name"
            android:textColor="@color/editTextColor"
            android:textSize="@dimen/textSize_edit_text" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/userNameStatic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/padding"
            android:text="@string/user"
            android:textColor="@color/editTextColor"
            android:textSize="@dimen/textSize_edit_text" />

        <TextView
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/padding"
            android:text="@string/app_name"
            android:textColor="@color/editTextColor"
            android:textSize="@dimen/textSize_edit_text" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/passwordStatic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/padding"
            android:text="@string/passStatic"
            android:textColor="@color/editTextColor"
            android:textSize="@dimen/textSize_edit_text" />

        <TextView
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/padding"
            android:text="@string/app_name"
            android:textColor="@color/editTextColor"
            android:textSize="@dimen/textSize_edit_text" />
    </TableRow>

</TableLayout>