<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login_background"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/edit_password_margin_top"
        android:gravity="left" >

        <EditText
            android:id="@+id/accountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_password_margin_left"
            android:layout_marginRight="@dimen/edit_password_margin_right"
            android:background="@drawable/graident_edit_text"
            android:hint="@string/accountName"
            android:inputType="text"
            android:padding="@dimen/padding"
            android:textColor="@color/editTextColor"
            android:textSize="@dimen/textSize_edit_text" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/edit_password_margin_top"
        android:gravity="left" >

        <Spinner
            android:id="@+id/catagorySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/editTextColor" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/edit_password_margin_top"
        android:gravity="left" >

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_password_margin_left"
            android:layout_marginRight="@dimen/edit_password_margin_right"
            android:background="@drawable/graident_edit_text"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="@dimen/padding"
            android:textColor="@color/editTextColor"
            android:textSize="@dimen/textSize_edit_text" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/edit_password_margin_top"
        android:gravity="left" >

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_password_margin_left"
            android:layout_marginRight="@dimen/edit_password_margin_right"
            android:background="@drawable/graident_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/padding"
            android:textSize="@dimen/textSize_edit_text" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/edit_password_margin_top"
        android:gravity="right" >

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/edit_password_margin_left"
            android:layout_marginRight="@dimen/edit_password_margin_right"
            android:background="@drawable/gradient_button"
            android:padding="@dimen/padding"
            android:text="@string/edit"
            android:textColor="@color/buttonText"
            android:textSize="@dimen/textSize_button"
             style="?android:attr/borderlessButtonStyle" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/edit_password_margin_top"
        android:gravity="left" >

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/edit_password_margin_left"
            android:layout_marginRight="@dimen/edit_password_margin_right"
            android:background="@drawable/gradient_button"
            android:padding="@dimen/padding"
            android:text="@string/delete"
            android:textColor="@color/buttonText"
            android:textSize="@dimen/textSize_button"
             style="?android:attr/borderlessButtonStyle" />
    </TableRow>

</TableLayout>