<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login_background"
    android:stretchColumns="*" >

    <!-- AppName id -->

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/login_margin_top_small"
        android:gravity="center_horizontal" >

        <EditText
            android:id="@+id/old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:layout_marginRight="@dimen/login_margin_right"
            android:background="@drawable/graident_edit_text"
            android:hint="@string/oldPassword"
            android:inputType="textPassword"
            android:padding="@dimen/padding"
            android:textColor="@color/editTextColor"
            android:textSize="@dimen/textSize_edit_text" />
    </TableRow>

    <!-- Password -->

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/login_margin_top_small"
        android:gravity="center_horizontal" >

        <EditText
            android:id="@+id/new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:layout_marginRight="@dimen/login_margin_right"
            android:background="@drawable/graident_edit_text"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            android:padding="@dimen/padding"
            android:textColor="@color/editTextColor"
            android:textSize="@dimen/textSize_edit_text" />
    </TableRow>
    
    
     <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/login_margin_top_small"
        android:gravity="center_horizontal" >

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:layout_marginRight="@dimen/login_margin_right"
            android:background="@drawable/graident_edit_text"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:padding="@dimen/padding"
            android:textColor="@color/editTextColor"
            android:textSize="@dimen/textSize_edit_text" />
    </TableRow>

    <!-- Next Button -->

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/login_margin_top_small"
        android:gravity="right" >

        <Button
            android:id="@+id/updateButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/login_margin_left_button"
            android:layout_marginRight="@dimen/login_margin_right"
            android:background="@drawable/gradient_button"
            android:padding="@dimen/padding"
            android:text="@string/update"
            android:textColor="@color/buttonText"
            android:textSize="@dimen/textSize_button" />
    </TableRow>

</TableLayout>