<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login_background"
     android:id="@+id/add_reminder_frag"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layout_marginTop_login_password"
        android:gravity="left" >

        <EditText
            android:id="@+id/reminderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_marginLeft_login"
            android:layout_marginRight="@dimen/layout_marginRight_login"
            android:background="@drawable/graident_edit_text"
            android:hint="@string/reminderName"
            android:inputType="text"
            android:padding="@dimen/android_padding_login"
            android:textColor="@color/buttonText1"
            android:textSize="@dimen/android_textSize_login" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layout_marginTop_login_password"
        android:gravity="left" >

        <EditText
            android:id="@+id/reminderNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_marginLeft_login"
            android:layout_marginRight="@dimen/layout_marginRight_login"
            android:background="@drawable/graident_edit_text"
            android:hint="@string/reminderNote"
            android:inputType="text"
            android:padding="@dimen/android_padding_login"
            android:textColor="@color/buttonText1"
            android:textSize="@dimen/android_textSize_login" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layout_marginTop_login_password"
        android:gravity="left" >

        <DatePicker
            android:id="@+id/reminderDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layout_marginTop_login_password"
        android:gravity="left" >
        
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal" >

             <Button
                 android:id="@+id/editReminderButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/button_radius"
                 android:layout_marginRight="@dimen/layout_marginRight_login"
                 android:layout_weight="1"
                 android:background="@drawable/gradient_button"
                 android:padding="@dimen/android_padding_login"
                 android:text="@string/edit"
                 android:textColor="@color/buttonText"
                 android:textSize="@dimen/android_textSize_login" />

              <Button
                  android:id="@+id/deleteReminderButton"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="@dimen/button_radius"
                  android:layout_marginRight="@dimen/layout_marginRight_login"
                  android:layout_weight="1"
                  android:background="@drawable/gradient_button"
                  android:padding="@dimen/android_padding_login"
                  android:text="@string/delete"
                  android:textColor="@color/buttonText"
                  android:textSize="@dimen/android_textSize_login" />
            
        </LinearLayout>
    </TableRow>

</TableLayout>