<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" 
     android:background="@drawable/gradient_login_background" 
     android:shrinkColumns="*"  android:stretchColumns="*">
     
       <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="left"  
         android:layout_marginTop="@dimen/layout_marginTop_login_password" >

       <EditText
           android:id="@+id/accountName"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/layout_marginLeft_login"
           android:layout_marginRight="@dimen/layout_marginRight_login"
           android:background="@drawable/graident_edit_text"
           android:hint="@string/accountName"
           android:inputType="text"
           android:padding="@dimen/android_padding_login"
           android:textColor="@color/buttonText1"
           android:textSize="@dimen/android_textSize_login" />
              
    </TableRow>
    
       
       
       
        <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="left"   
         android:layout_marginTop="@dimen/layout_marginTop_login_password" >
       
            
             <Spinner
                android:id="@+id/catagorySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/buttonText1" />

    
             
    </TableRow>
    
        
          <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="left"  
         android:layout_marginTop="@dimen/layout_marginTop_login_password"  >

       <EditText
           android:id="@+id/username"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/layout_marginLeft_login"
           android:layout_marginRight="@dimen/layout_marginRight_login"
           android:background="@drawable/graident_edit_text"
           android:hint="@string/username"
           android:inputType="text"
           android:padding="@dimen/android_padding_login"
           android:textColor="@color/buttonText1"
           android:textSize="@dimen/android_textSize_login" />
            
    </TableRow>
    
        
          <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="left" 
         android:layout_marginTop="@dimen/layout_marginTop_login_password"   >
        <EditText
                                android:id="@+id/password"
                                android:inputType="textPassword"   
                                 android:hint="@string/password"                            
                                android:layout_marginRight="@dimen/layout_marginRight_login"
                                android:layout_marginLeft="@dimen/layout_marginLeft_login"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/graident_edit_text"
                                android:padding="@dimen/android_padding_login"
                                android:textSize="@dimen/android_textSize_login" />              
    </TableRow>
    
            <TableRow
                               android:layout_width="fill_parent"
                               android:layout_height="0dp"
                               android:layout_marginTop="@dimen/layout_marginTop_login_password"
                               android:gravity="right" >
						    
					        <Button
					            android:id="@+id/editButton"
					            android:layout_width="wrap_content"
					            android:layout_height="match_parent"
					             android:layout_marginLeft="@dimen/layout_marginLeft_login"
					            android:layout_marginRight="@dimen/layout_marginRight_login"
					            android:background="@drawable/gradient_button"
					            android:padding="@dimen/android_padding_login"
					            android:text="@string/edit"
					            android:textColor="@color/buttonText"
					            android:textSize="@dimen/android_textSize_login" />

                       		</TableRow>
                       		
              <TableRow
                               android:layout_width="fill_parent"
                               android:layout_height="0dp"
                               android:layout_marginTop="@dimen/layout_marginTop_login_password"
                               android:gravity="left" >
						    
					        <Button
					            android:id="@+id/deleteButton"
					            android:layout_width="wrap_content"
					            android:layout_height="match_parent"
					              android:layout_marginLeft="@dimen/layout_marginLeft_login"
					            android:layout_marginRight="@dimen/layout_marginRight_login"
					            android:background="@drawable/gradient_button"
					            android:padding="@dimen/android_padding_login"
					            android:text="@string/delete"
					            android:textColor="@color/buttonText"
					            android:textSize="@dimen/android_textSize_login" />

                       		</TableRow>
    
       
    
      
    
       
    

</TableLayout>
