<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login_background"
     android:id="@+id/add_reminder_frag"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
         android:gravity="left" 
            android:layout_marginTop="@dimen/add_reminder_margin_top">

        <EditText
            android:id="@+id/reminderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/add_reminder_margin_left"
            android:layout_marginRight="@dimen/add_reminder_margin_right"
            android:background="@drawable/graident_edit_text"
            android:hint="@string/reminderName"
            android:inputType="text"
            android:gravity="center"
            android:padding="@dimen/padding"
            android:textColor="@color/editTextColor"
            android:textSize="@dimen/textSize_edit_text" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
      
        android:layout_marginTop="@dimen/add_reminder_margin_top"
        android:gravity="left" >

        <EditText
            android:id="@+id/reminderNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/add_reminder_margin_left"
            android:layout_marginRight="@dimen/add_reminder_margin_right"
            android:background="@drawable/graident_edit_text"
            android:hint="@string/reminderNote"
            android:inputType="text"
           android:gravity="center"
            android:padding="@dimen/padding"
            android:textColor="@color/editTextColor"
            android:textSize="@dimen/textSize_edit_text" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        
     
        android:gravity="left" >

        <DatePicker
            android:id="@+id/reminderDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
             android:gravity="right"
              android:layout_marginTop="@dimen/add_reminder_margin_top" >

        <Button
            android:id="@+id/saveButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/add_reminder_margin_top"
            android:layout_marginLeft="@dimen/add_reminder_margin_left_button"
            android:layout_marginRight="@dimen/add_reminder_margin_right"
            android:background="@drawable/gradient_button"
          android:padding="@dimen/padding"
            android:text="@string/save"
            android:textColor="@color/buttonText"
            android:textSize="@dimen/textSize_button" />

    </TableRow>

</TableLayout>